<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_apps</name>
  <version>0.0.1</version>
  <description>ROS2 Component Wrapper for PCL</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>pcl_conversions</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_synchronizer</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_apps_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libboost-system-dev</depend>
  <depend>ndt_omp</depend>
  <depend>perception_msgs</depend>
  <depend>image_geometry</depend>
  <depend>visualization_msgs</depend>
  <depend>color_names</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
