# Pointcloud Projection Component/Node
ament_auto_add_library(pointcloud_projection_component SHARED
pointcloud_projection/pointcloud_projection_component.cpp
)
target_compile_definitions(pointcloud_projection_component PRIVATE "PCL_APPS_POINTCLOUD_PROJECTION_BUILDING_DLL")
target_link_libraries(pointcloud_projection_component ${PCL_LIBRARIES})

ament_auto_add_executable(pointcloud_projection_node
  pointcloud_projection/pointcloud_projection_node.cpp
)
target_link_libraries(pointcloud_projection_node
  pointcloud_projection_component)
